# SOI_Bench

./: .gitignore  Book1.csv  LICENSE  README.md
.history/: README_20250510220905.md  README_20260327154537.md  README_20260327154546.md  README_20260327154558.md  README_20260327154601.md  README_20260327154602.md  README_20260327154604.md  README_20260327154606.md  README_20260327154754.md  README_20260327154803.md  README_20260327155012.md  README_20260327155032.md  README_20260327155038.md  README_20260327155040.md  README_20260327155043.md  README_20260327155048.md  README_20260327155052.md  README_20260327155419.md  README_20260327155428.md  README_20260327155429.md  README_20260327155537.md  README_20260327155938.md  README_20260426161317.md
conda_info/: cast.yaml  deepst.yaml  gpsa.yaml  graphst.yaml  heart.yaml  inspire.yaml  moscot.yaml  paste.yaml  paste2.yaml  precast.yaml  santo.yaml  scslat.yaml  sder.yaml  sedr.yaml  spacel.yaml  spateo.yaml  spatialign.yaml  spiral.yaml  stagate.yaml  stalign.yaml  staligner.yaml  stamp.yaml  (+2 more)
soi_bench_agent/: README.md  main.py  pyproject.toml
soi_bench_agent/data/clean/: benchmark_records.csv  dataset_profiles.json  dataset_rankings.json  method_profiles.json
soi_bench_agent/prompts/: classify_intent.md  extract_profile.md  follow_up_answer.md  recommendation_answer.md  system.md
soi_bench_agent/src/soi_bench_agent/: __init__.py  cli.py  config.py  data_cleaning.py  knowledge_base.py  llm.py  models.py  prompts.py  recommendation.py  utils.py
soi_bench_agent/tests/: test_data_pipeline.py  test_recommendation.py
(+143 files in other folders)
